      distribution to be part of a separate distribution also
      on CPAN:

          Bio::AlignIO::stockholm
          Bio::DB::Expression
          Bio::DB::Expression::geo
          Bio::Index::Stockholm
          Bio::SearchDist
          Bio::Tools::AlignFactory
          Bio::Tools::dpAlign
          Bio::Tools:pSW

    * The following programs have been removed:

          bp_netinstall

    [Code changes]

    * The deobfuscator has been removed.

    * The script `bp_blast2tree` has been moved to the BioPerl-Run
      distribution since it's mainly a wrapper to modules in there.

    * The entire Bio::PopGen namespace, Bio::Tree::AlleleNode
      module, and scripts bp_composite_LD and bp_heterogeneity_test
      have been moved into a separate distribution named Bio-PopGen.

    * All modules related to the NeXML format have been moved into a
      separate distribution named Bio-NeXMLIO.  These are:

          * Bio::AlignIO::nexml
          * Bio::Nexml::Factory
          * Bio::NexmlIO
          * Bio::SeqIO::nexml
          * Bio::TreeIO::nexml

      This also means BioPerl is no longer dependent on Bio-Phylo.

    * All modules interfacing to ACeDB servers have been moved into a
      separate distribution named Bio-DB-Ace.  These are:

          * Bio::DB::Ace
          * Bio::DB::GFF::Adaptor::ace
          * Bio::DB::GFF::Adaptor::dbi::mysqlace
          * Bio::DB::GFF::Adaptor::dbi::oracleace

      This also means BioPerl is no longer dependent on AcePerl.

    * The module Bio::Draw::Pictogram has been moved to a separate
      distribution named Bio-Draw-Pictogram.  This also means BioPerl
      is no longer dependent on SVG.

    * The module Bio::Tree::Draw::Cladogram has been moved to a
      separate distribution named Bio-Tree-Draw-Cladogram.  This also
      means BioPerl is no longer dependent on PostScript.

    * The module Bio::TreeIO::svggraph has been moved to a separate